# agentBlocks

./: CLAUDE.md  README.md  agentblocks_design.md  blocksMockup.tsx  functional_pipeline_editor.html  node-examples.md  node-specs.md  nodeDisplay.md  package-lock.json  photo_editor_dark.html  reactTypescript.md
desktop-client/: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  IMPLEMENTATION.md  INSTALL_DEPS.sh  README.md  demo.py  tauri.conf.json
desktop-client/frontend/: index.html
desktop-client/src/: main.rs
frontend/: ARCHITECTURE.md  README.md  events-callbacks.md  package-lock.json  package.json  reactjs-tutorial.md  test-generators.js  test-generators.mjs  todo.md
frontend/backend/: app.py  requirements.txt
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BlockComponent.tsx  BlockEditor.tsx  BlockPalette.tsx  CanvasPropertyPanel.tsx  CodeModal.tsx  ConnectionLine.tsx  Console.tsx  ExportButton.tsx  ExportPanel.tsx  HelpModal.tsx  LLMQueryPanel.tsx  Layout.tsx  NodeComponent.tsx  NodePalette.tsx  PanelComponent.tsx  PanelModal.tsx  PropertiesPanel.tsx  TreeView.tsx  VariablePicker.tsx  WorkflowEditor.tsx
frontend/src/examples/: WorkflowEditorIntegration.tsx
frontend/src/nodes/: NodeDefinitionLoader.ts  NodeDefinitionProvider.ts  WorkflowExporter.ts
frontend/src/test/: app-search-integration.test.ts  code-generation-callback-tests.test.ts  code-generation-react-integration.test.ts  reset-workflow.test.ts  search-bug-reproduction.test.ts  search-functionality.test.ts  user-expected-behavior.test.ts  workflow-structure.test.ts
(+12 files in other folders)
